# pangenomeplus

./: API.md  EXAMPLES.md  INSTALLATION.md  README.md  TUTORIAL.md  pyproject.toml  requirements.txt  setup.py
src/: config.yaml
src/pangenomeplus/: __init__.py  __main__.py  main.py  pipeline.py
src/pangenomeplus/core/: __init__.py  exceptions.py  id_generation.py  types.py
src/pangenomeplus/modules/: __init__.py  annotation.py  clustering.py  downstream_analysis.py  extraction.py  families.py  output.py
src/pangenomeplus/utils/: __init__.py  config.py
